syntax = "proto3";
package movie;
option go_package = "./";


message MovieMsgRequest {
    int32 count = 1;
}

message MovieMsgReply {
    string message = 1;
}

service MovieRPC {
    rpc GetAllMovies (MovieMsgRequest) returns (MovieMsgReply){}
}