syntax = "proto3";
package user;
option go_package = "./";


message UserMsgRequest {
    int32 count = 1;
}

message UserMsgReply {
    string message = 1;
}

service UserRPC {
    rpc GetAllUsers (UserMsgRequest) returns (UserMsgReply){}
}